qt/quick/gen_qquickitemgrabresult.h

class QImage;
class QMetaObject;
class QQuickItemGrabResult;
class QUrl;
typedef struct QImage QImage;
typedef struct QMetaObject QMetaObject;
typedef struct QQuickItemGrabResult QQuickItemGrabResult;
typedef struct QUrl QUrl;
QMetaObject* QQuickItemGrabResult_metaObject(const QQuickItemGrabResult* self);
void* QQuickItemGrabResult_metacast(QQuickItemGrabResult* self, const char* param1);
int QQuickItemGrabResult_metacall(QQuickItemGrabResult* self, int param1, int param2, void** param3);
struct miqt_string QQuickItemGrabResult_tr(const char* s);
struct miqt_string QQuickItemGrabResult_trUtf8(const char* s);
QImage* QQuickItemGrabResult_image(const QQuickItemGrabResult* self);
QUrl* QQuickItemGrabResult_url(const QQuickItemGrabResult* self);
bool QQuickItemGrabResult_saveToFile(QQuickItemGrabResult* self, struct miqt_string fileName);
bool QQuickItemGrabResult_saveToFileWithFileName(const QQuickItemGrabResult* self, struct miqt_string fileName);
void QQuickItemGrabResult_ready(QQuickItemGrabResult* self);
void QQuickItemGrabResult_connect_ready(QQuickItemGrabResult* self, intptr_t slot);
struct miqt_string QQuickItemGrabResult_tr2(const char* s, const char* c);
struct miqt_string QQuickItemGrabResult_tr3(const char* s, const char* c, int n);
struct miqt_string QQuickItemGrabResult_trUtf82(const char* s, const char* c);
struct miqt_string QQuickItemGrabResult_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QQuickItemGrabResult_staticMetaObject();
void QQuickItemGrabResult_delete(QQuickItemGrabResult* self);